# mrk

./: .bochsrc  .clang-format  .gitignore  .gitmodules  Cargo.toml  lor  meson.build
.cargo/: config.toml  x86_64-mrk.json
.github/workflows/: meson.yml
arch/: apic.cc  arch.cc  boot.cc  cpu.cc  funcs.asm  gdt.cc  idt.cc  intr.asm  smp.cc
assets/: mrk-aarch64-clang.txt  mrk-aarch64.txt  sabaton_virt_aa64.bin.xz
docs/: book.toml  meson.build  todo.md
docs/src/: CODE_OF_CONDUCT.md  SUMMARY.md
docs/src/contrib/: commit-messages.md  index.md
docs/src/kernel/: aarch64-notes.md  initgraph.md  x86_64-notes.md
docs/src/kernel/vm/: aspace.md  index.md  object.md  zone.md
fs/: fs.cc  node.cc  tmpfs.cc
include/internal/: builtin.h  lock.h  version.h
include/lib/klib/: alloc.h  builtin.h  queue.h
include/mrk/: acpi.h  alloc.h  apic.h  arch.h  cpu.h  fs.h  lock.h  proc.h  smp.h  vmm.h
kernel/: Cargo.toml  Xargo.toml  lock.cc  log.cc  meson.build  meson_options.txt  ubsan.cc
kernel/.cargo/: config.toml  x86_64-kernel.ld
kernel/acpi/: acpi.cc  acpi_lai.cc
kernel/arch/aarch64/: arch.c  boot.c  debug.c  dtb.c  intr.c  linker.ld  meson.build  timer.c  vectors.S  vmm.c
kernel/arch/aarch64/include/: dtb.h
kernel/arch/aarch64/include/arch/: arch.h  debug.h  dtb.h  intr.h  timer.h  vmm.h
kernel/generic/: fbcon.c  init.c  initgraph.c  log.c
kernel/generic/acpi/: acpi.c
kernel/include/: fmt.h
kernel/include/arch/: apic.h  arch.h  cpu.h  hpet.h  idt.h  smp.h
kernel/include/generic/: acpi.h  fbcon.h  initgraph.h  log.h  pci.h
kernel/include/internal/: atomic.h  lock.h  stivale2.h
kernel/include/lib/: alloc.h  bitops.h  builtins.h  fmt.h  list.h  stivale2.h
kernel/include/lib/klib/: alloc.h  builtin.h  queue.h  vector.h
kernel/include/mrk/: acpi.h  alloc.h  log.h  mmap.h  pmm.h  proc.h
kernel/include/vm/: asid_allocator.h  phys.h  virt.h  virtual.h  vm.h
kernel/lib/: alloc.c  bitops.c  builtins.c  fmt.c
kernel/lib/klib/: builtin.cc
kernel/proc/: simd.cc  syscall.asm
kernel/src/: acpi.cc  debug.rs  lock.cc  log.cc  logger.rs  main.rs  ubsan.cc
kernel/src/arch/: apic.cc  arch.cc  boot.cc  cpu.cc  funcs.asm  gdt.cc  hpet.cc  idt.cc  smp.cc
kernel/src/arch/x86_64/: mod.rs
kernel/src/mm/: alloc.cc  mmap.cc  pmm.cc  vmm.cc
kernel/src/proc/: sched.cc  simd.cc
kernel/vm/: asid_allocator.c  phys.c  virt.c  virtual.c  vm.c
lib/klib/: alloc.c  builtin.cc
misc/: Makefile.old  kernel.ld  limine.cfg
misc/patches/: binutils.patch
mm/: alloc.cc  mmap.cc  pmm.cc  vmm.cc
tools/: bundle_iso.sh  clang_format.sh  run-qemu.sh
