# Copyright © 2021 Yusuf M. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "kernel",
#    "lib/syscall",
]

# Disable stack unwinding since most targets run on bare metal
[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true

# Tell cargo about our rustc targets
[env]
RUST_TARGET_PATH = "./.cargo/"
