[package]
name = "mrk"
version = "0.1.0"
authors = [ "Yusuf M <circutrider21@gmail.com>" ]

description = "A Modern 64-bit Microkernel written in rust"
license = "Apache-2.0"
edition = "2018"

[[bin]]
name = "mrk"
path = "src/main.rs"

[dependencies]
stivale-boot = "0.2.3"
log = "0.4"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
